Tkt-020: Fix chart not working on mobile dimension

--- a/src/app/(dashboard)/(research)/measurement_tool_assessment/page.module.css
+++ b/src/app/(dashboard)/(research)/measurement_tool_assessment/page.module.css
@@ -185,6 +185,7 @@
   width: 100%;
   height: 100%;
   border: none;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
@@ -236,6 +237,13 @@
   .chartContainer {
     height: 600px;
     padding: 1rem;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  .chartContainer iframe {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
   
   .mapDisplay {
